amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


VERSION 1.2-beta2:
  FIX: Lyrics parsing failed for certain songs. (BR 94269)
  ADD: xine-engine saves config, and implements crossfade, bug fixed too
  ADD: Player-Window can also show the BlockAnalyzer.
  CHG: Run incremental scanning once a minute instead of every 30 seconds.
  FIX: When collection scanning was interrupted with Cancel, incremental
       scanning didn't work any longer.
  CHG: Handle incremental file scanning in a thread. Now the GUI doesn't
       get blocked every 30 seconds, anymore. (BR 93564)
  ADD: CollectionBrowser now offers two operation modes:
       The classical TreeView and a new FlatView (like the WinAmp Library).
  FIX: Caching of local cover images was broken for non-unique filenames.
       (BR 94068)
  FIX: "Visualizations" menu entry was always disabled.
  FIX: Play button was sometimes stuck in disabled state.
  FIX: OSD was showing "%artist - %track" instead of "%artist - %title".
  FIX: Forward command line option --engine to amarokapp.
  FIX: CoverFetcher was always looking for "album - album".

VERSION 1.2-beta1:
  ADD: Full support for Audioscrobbler, including submission of tracks.
  FIX: Arts engine resumes from position when session is restored.
  ADD: Vorbis stream metadata support (GStreamer-engine). (BR 82378)
  ADD: Cover image and lyric fetchers include filters for common
       extensions, such as (Disc 1). (BR 90630)
  ADD: Ability to choose from four different Amazon locales. (BR 90664)
  ADD: OSD now draws gradient instead of solid colour.
  ADD: 'Stop after current song' functionality. (BR 88652)
  FIX: Queue function from context/collection browsers actually properly
       queues tracks. (BR 90319)
  ADD: MySQL database support. Patch by Andreas Mair <am_ml@linogate.com>.
       Please refer to mailing list for detailed instructions.
  ADD: Metadata history for streams in Context-Browser. (BR 89839)
  ADD: Command line option --engine.