@@ -42,17 +42,14 @@ CollectionSetup::CollectionSetup( QWidget *parent )
 
     m_view = new QListView( this );
     m_recursive = new QCheckBox( i18n("&Scan folders recursively"), this );
-    m_monitor   = new QCheckBox( i18n("&Monitor changes"), this );
     m_playlists = new QCheckBox( i18n("&Import playlists"), this );
 
     QToolTip::add( m_recursive, i18n( "If selected, amaroK reads all folders recursively." ) );
-    QToolTip::add( m_monitor,   i18n( "If selected, folders will automatically get rescanned when the content is modified, e.g. when a new file was added." ) );
     QToolTip::add( m_playlists, i18n( "If selected, playlist files (.m3u) will automatically be added to the Playlist-Browser." ) );
 
     // Read config values
     m_dirs = AmarokConfig::collectionFolders();
     m_recursive->setChecked( AmarokConfig::scanRecursively() );
-    m_monitor->setChecked( AmarokConfig::monitorChanges() );
     m_playlists->setChecked( AmarokConfig::importPlaylists() );
 
     m_view->addColumn( QString::null );
@@ -69,7 +66,6 @@ CollectionSetup::writeConfig()
 {
     AmarokConfig::setCollectionFolders( m_dirs );
     AmarokConfig::setScanRecursively( recursive() );
-    AmarokConfig::setMonitorChanges( monitor() );
     AmarokConfig::setImportPlaylists( importPlaylists() );
 }
 
