@@ -42,7 +42,6 @@ public:
 
     QStringList dirs() const { return m_dirs; }
     bool recursive() const { return m_recursive->isChecked(); }
-    bool monitor() const { return m_monitor->isChecked(); }
     bool importPlaylists() const { return m_playlists->isChecked(); }
 
 private:
@@ -51,7 +50,6 @@ private:
     QListView *m_view;
     QStringList m_dirs;
     QCheckBox *m_recursive;
-    QCheckBox *m_monitor;
     QCheckBox *m_playlists;
 };
 
