@@ -4,8 +4,10 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta2:
+  CHG: "Start Scan" button was removed, as well as "Monitor Changes"
+       option. Collection is now always monitored.
   FIX: Lyrics parsing failed for certain songs. (BR 94269)
-  ADD: xine-engine saves config, and implements crossfade, bug fixed too
+  ADD: xine-engine saves config, and implements crossfade, bug fixed too.
   ADD: Player-Window can also show the BlockAnalyzer.
   CHG: Run incremental scanning once a minute instead of every 30 seconds.
   FIX: When collection scanning was interrupted with Cancel, incremental
